--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -91,7 +91,7 @@ features:
       category: ''
       category_id: ''
   search:
-    provider: wowchemy
+    provider: NJUPT
     algolia:
       app_id: ''
       api_key: ''
